--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,15 @@ body {
    color: palevioletred;
    background: black;
 }
+body {
+   color: rgb(0, 0, 0);
+   background: pink;
+   margin: 0px;
+}
+
+header {
+    border-bottom: solid 2px rgb(255, 255, 255);
+    padding: 20px;
+    font-size: 35px;
+    color: rgb(255, 255, 255);
+}
